--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>198877df-bef7-43a5-8757-29b03781558d</groupId>
 	<artifactId>project1</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<packaging>mule-application</packaging>
 
 	<name>project1</name>
