--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -62,17 +62,17 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 8
-    - name: Publish to Exchange
-      env:
-        #USERNAME: ${{ secrets.anypoint_platform_username }}
-        #PASSWORD: ${{ secrets.anypoint_platform_password }}
-        ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
-        SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
-        KEY: ${{ secrets.decryption_key }}
-      run: |
-        mvn deploy --settings ./project1/.maven/settings.xml -DskipMunitTests \
-          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
+    # - name: Publish to Exchange
+    #   env:
+    #     #USERNAME: ${{ secrets.anypoint_platform_username }}
+    #     #PASSWORD: ${{ secrets.anypoint_platform_password }}
+    #     ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
+    #     SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
+    #     KEY: ${{ secrets.decryption_key }}
+    #   run: |
+    #     mvn deploy --settings ./project1/.maven/settings.xml -DskipMunitTests \
+    #       -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+    #       -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
           
     - name: Build with Maven
       run: mvn clean -B package --file pom.xml -s .maven/settings.xml -DskipMunitTests
