Update upload path  mono.yml

--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -86,7 +86,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
           name: artifacts
-          path: target/*.jar
+          path: project1/target/*.jar
         
   deploy:
     needs: build
