--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Sandbox
+name: Project2 Build and Deploy to Sandbox
 
 on:
   push:
@@ -12,6 +12,126 @@ on:
 defaults:
   run:
    working-directory: ./project1
+  
+    
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout this repo
+      uses: actions/checkout@v4
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('.**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'zulu'
+        java-version: 8
+    - name: Test with Maven
+      env:
+        nexus_username: ${{ secrets.nexus_username }}
+        nexus_password: ${{ secrets.nexus_password }}
+        KEY: ${{ secrets.decryption_key }}
+      run: mvn clean test --settings .maven/settings.xml -Dsecure.key="$KEY"
+    - name: Upload MUnit reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: munit-test-reports
+        path: target/site/munit/coverage/
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout this repo
+      uses: actions/checkout@v4
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'zulu'
+        java-version: 8
+    # - name: Publish to Exchange
+    #   env:
+    #     #USERNAME: ${{ secrets.anypoint_platform_username }}
+    #     #PASSWORD: ${{ secrets.anypoint_platform_password }}
+    #     ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
+    #     SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
+    #     KEY: ${{ secrets.decryption_key }}
+    #   run: |
+    #     mvn deploy --settings ./project1/.maven/settings.xml -DskipMunitTests \
+    #       -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+    #       -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
+          
+    - name: Build with Maven
+      run: mvn clean -B package --file pom.xml -s .maven/settings.xml -DskipMunitTests
+    - name: Stamp artifact file name with commit hash
+      run: |
+        artifactName1=$(ls target/*.jar | head -1)
+        commitHash=$(git rev-parse --short "$GITHUB_SHA")
+        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+        mv $artifactName1 $artifactName2
+    - name: Upload artifact 
+      uses: actions/upload-artifact@v4
+      with:
+          name: artifacts
+          path: project1/target/*.jar
+        
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:    
+    - name: Checkout this repo
+      uses: actions/checkout@v4
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - uses: actions/download-artifact@v4
+      with:
+        name: artifacts
+    
+    - name: Deploy to Sandbox
+      env:
+        #USERNAME: ${{ secrets.anypoint_platform_username }}
+        #PASSWORD: ${{ secrets.anypoint_platform_password }}
+        ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
+        SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
+        KEY: ${{ secrets.decryption_key }}
+      run: |
+        artifactName=$(ls *.jar | head -1)
+        mvn -e -X clean deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
+         -Dmule.artifact=$artifactName \
+         -Dclient.id="$ID" \
+         -Dclient.secret="$SECRET" \
+         -Ddecryption.key="$KEY"roBuild and Deploy to Sandbox
+
+on:
+  push:
+    branches: [ main ]
+    
+      
+  pull_request:
+    branches: [ main ]
+   
+  workflow_dispatch:
+defaults:
+  run:
+   working-directory: ./project2
   
     
 jobs:
@@ -40,7 +160,7 @@ jobs:
         nexus_username: ${{ secrets.nexus_username }}
         nexus_password: ${{ secrets.nexus_password }}
         KEY: ${{ secrets.decryption_key }}
-      run: mvn clean test --settings --file settings.xml -Dsecure.key="$KEY"
+      run: mvn clean test --settings -s settings.xml -Dsecure.key="$KEY"
     - name: Upload MUnit reports
       uses: actions/upload-artifact@v4
       with:
