--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Move settings.xml to working directory
       run: |
-        mv .maven/* ./project
+        mv ./.maven/* ./project
     - name: Cache dependencies
       uses: actions/cache@v4
       with:
