--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -19,9 +19,9 @@ jobs:
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v4
-    - name: Move settings.xml to working directory
-      run: |
-        mv ./.maven/* ./project
+    # - name: Move settings.xml to working directory
+    #   run: |
+    #     mv .maven/* ./project
     - name: Cache dependencies
       uses: actions/cache@v4
       with:
