--- a/.github/workflows/mono.yml
+++ b/.github/workflows/mono.yml
@@ -1,12 +1,12 @@
 name: Build and Deploy to Sandbox
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
     
       
-  pull_request:
-    branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
    
   workflow_dispatch:
 defaults:
