--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -65,17 +65,17 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 8
-    # - name: Publish to Exchange
-    #   env:
-    #     #USERNAME: ${{ secrets.anypoint_platform_username }}
-    #     #PASSWORD: ${{ secrets.anypoint_platform_password }}
-    #     ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
-    #     SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
-    #     KEY: ${{ secrets.decryption_key }}
-    #   run: |
-    #     mvn clean deploy --settings .maven/settings.xml -DskipMunitTests \
-    #       -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
-    #       -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
+    - name: Publish to Exchange
+      env:
+        #USERNAME: ${{ secrets.anypoint_platform_username }}
+        #PASSWORD: ${{ secrets.anypoint_platform_password }}
+        ID: ${{ secrets.CONNECTED_APP_CLIENT_ID }}
+        SECRET: ${{ secrets.CONNECTED_APP_CLIENT_SECRET }}
+        KEY: ${{ secrets.decryption_key }}
+      run: |
+        mvn clean deploy --settings /home/runner/work/monorepo/monorepo/.maven/settings.xml -DskipMunitTests \
+          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
           
     - name: Build with Maven
       run: mvn -e -X clean -B package --file pom.xml -s /home/runner/work/monorepo/monorepo/.maven/settings.xml -DskipMunitTests
