--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -7,8 +7,12 @@ on:
       
   pull_request:
     branches: [ main ]
+  
    
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 defaults:
   run:
    working-directory: ./project2
