--- a/.github/workflows/project1.yml
+++ b/.github/workflows/project1.yml
@@ -1,14 +1,15 @@
 
 name: build and deploy project2
-on:
-  push:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
     
       
-  pull_request:
-    branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
   
-   
+on:
+  workflow_call:
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
